# gigabyte_gdrv3_exploit

./: Cargo.toml  README.md
src/: gdrv3_ioctls.rs  main.rs  util.rs
