[package]
name = "gdrv3_exploit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "*"
cbc = {version = "*", features = ["alloc"]}
bitflags = "*"

[dependencies.windows]
version = "*"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_WindowsProgramming",
]
